# BirdNET-Analyzer

./: pyproject.toml
