[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "birdnet_analyzer"
version = "2.4.0"
license = { text = "MIT" }
description = "BirdNET analyzer for scientific audio data processing and bird classification."
authors = [{ name = "Stefan Kahl" }]
maintainers = [{ name = "Josef Haupt" }, { name = "Max Mauermann" }]
keywords = ["birdnet", "birdnet-analyzer"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Unix",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "librosa>=0.11",
    "resampy",
    "tensorflow>=2.20",
    "pyarrow>=22.0.0;platform_system=='Darwin'", # https://github.com/apache/arrow/issues/40088
    "tqdm",
    "pandas",
    "matplotlib",
    "birdnet>=0.2.16,<1",
]

[project.optional-dependencies]
train = ["optuna", "optuna-integration"]
gui = [
    "birdnet-analyzer[train,embeddings]",
    "gradio==6.7.0",                     # 6.11.0 has tab-switching freeze bug (gradio-app/gradio#13198), also some components don't refresh anymore
    "pywebview>=6.1,<7.0",
    "plotly[express]",
    "pywin32;platform_system=='Windows'",
    "qtpy;platform_system=='Linux'",
    "PyGObject;platform_system=='Linux'",
]
embeddings = ["perch-hoplite>=1.0.1,<2.0.0"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-argparse"]
tests = ["pytest", "pytest-timeout", "pytest-order"]
dev = ["birdnet_analyzer[tests]", "birdnet_analyzer[docs]", "ruff==0.15.10"]

[project.scripts]
birdnet-analyze = "birdnet_analyzer.analyze.cli:main"
birdnet-embeddings = "birdnet_analyzer.embeddings.cli:main"
birdnet-evaluate = "birdnet_analyzer.evaluation.__init__:main"
birdnet-search = "birdnet_analyzer.search.cli:main"
birdnet-train = "birdnet_analyzer.train.cli:main"
birdnet-segments = "birdnet_analyzer.segments.cli:main"
birdnet-species = "birdnet_analyzer.species.cli:main"

[project.gui-scripts]
birdnet-gui = "birdnet_analyzer.gui.__init__:main"

[project.urls]
Homepage = "https://birdnet.cornell.edu/birdnet"
Documentation = "https://birdnet-team.github.io/BirdNET-Analyzer/"
Repository = "https://github.com/birdnet-team/BirdNET-Analyzer"
Issues = "https://github.com/birdnet-team/BirdNET-Analyzer/issues"
Download = "https://github.com/birdnet-team/BirdNET-Analyzer/releases/latest"

[tool.setuptools]
packages = [
    "birdnet_analyzer",
    "birdnet_analyzer.analyze",
    "birdnet_analyzer.gui",
    "birdnet_analyzer.embeddings",
    "birdnet_analyzer.search",
    "birdnet_analyzer.species",
    "birdnet_analyzer.segments",
    "birdnet_analyzer.train",
    "birdnet_analyzer.evaluation",
    "birdnet_analyzer.evaluation.preprocessing",
    "birdnet_analyzer.evaluation.assessment",
]

[tool.setuptools.package-data]
birdnet_analyzer = [
    "eBird_taxonomy_codes_2024E.json",
    "lang/*",
    "gui/assets/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["birdnet_analyzer"]
timeout = 120
filterwarnings = [
    "ignore::DeprecationWarning:audioread.*",
    "ignore::UserWarning:sklearn.*",
]

[tool.ruff]
exclude = ["conf.py"]
line-length = 88

[tool.ruff.lint]
select = [
    "F",
    "B",
    "A",
    "C4",
    "T10",
    "EXE",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TD",
    "TC",
    #"PTH",
    "FLY",
    "I",
    "NPY",
    "PD",
    #"N",
    "PERF",
    "E",
    "W",
    #"D",
    "PL",
    "UP",
    "FURB",
    "RUF",
]
ignore = [
    "B008",
    "TD003",
    "TD002",
    "SIM108",
    "E722",
    "PLR2004",
    "PLR0913",
    "PLR0915",
    "PLR0912",
    "PLC0206",
    "PLC0415",
    "RUF015",
    "PD002",
]
